packages/react-server/examples/basic/src/routes/test/error/boundary/not-found.tsx
export default function NotFound() {
  return <div>boundary/not-found.tsx</div>;
}
